# anon-dict

./: .env  .gitignore  Cargo.toml  README.md  launch.json
migrations/2024-04-19-144509_create_db/: down.sql  up.sql
src/: db.rs  main.rs  search.rs
src/db/: levenshtein_distance.rs  schema.rs  word_data.rs
src/search/: levenshtein_distance.rs
tests/: test_query_word.rs
