[package]
name = "anon_dict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.37.0", features = ["full"] }
diesel = { version = "2.1.6", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
